idea/testData/multiModuleHighlighting/typesRefinementSupertypes/d1/d1.kt
package foo

<error descr="[UNSUPPORTED_FEATURE] The feature \"multi platform projects\" is experimental and should be enabled explicitly">expect</error> interface Supertype

class A : Supertype


